--- a/portfolio-react/src/assets/css/index.css
+++ b/portfolio-react/src/assets/css/index.css
@@ -1,3 +1,16 @@
+:root {
+  --primary: #8c54ff;
+  --secondary: #f3a847;
+  --tertiary: #b12704;
+  --light: #fafafa;
+  --dark: #000000;
+  --darker: #111111;
+  --error: rgb(228, 46, 1);
+  --spacing-one: calc(1rem * 0.5);
+  --spacing-two: calc(1rem);
+  --spacing-five: calc(2.5rem);
+}
+
 .img-thumbnail {
   width: auto;
   height: 300px;
@@ -12,5 +25,10 @@
 
 footer {
   color: red;
-  margin-top: 0;
+}
+.flex-wrapper {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  justify-content: space-between;
 }
